--- a/client/src/components/pages/Product/Product.css
+++ b/client/src/components/pages/Product/Product.css
@@ -9,14 +9,18 @@
   float: left;
 }
 
-.myContainer {
+.smallContainer {
   position: relative;
-  width: 80%;
-  left: 10%;
+  width: 60%;
+  left: 20%;
 }
 
 .flex {
   position: relative;
   width: 100%;
   display: flex;
+}
+
+.prodPage {
+  margin-top: 20px;
 }
