changing images to be stored on google

--- a/client/src/components/pages/Landing/landing.css
+++ b/client/src/components/pages/Landing/landing.css
@@ -1,5 +1,5 @@
 .background-img {
-  background-image: url("../../../images/alex-wong-17997.jpg");
+  background-image: url("https://photos.google.com/photo/AF1QipPk9auv75_5VDvUbYSVEk8ulYE7OMr3kEaLO9dQ");
   background-size: cover;
   background-position: center center;
   height: 100vh;
