updating image urls

--- a/client/src/components/pages/Landing/landing.css
+++ b/client/src/components/pages/Landing/landing.css
@@ -1,5 +1,5 @@
 .background-img {
-  background-image: url("https://photos.google.com/photo/AF1QipPk9auv75_5VDvUbYSVEk8ulYE7OMr3kEaLO9dQ");
+  background-image: url("https://images.unsplash.com/photo-1431578500526-4d9613015464?ixlib=rb-0.3.5&s=483971b88445819e2eebcb9fbbfe12ec&auto=format&fit=crop&w=1350&q=80");
   background-size: cover;
   background-position: center center;
   height: 100vh;
